// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render as a primary button 1`] = `
<Button
  className="position-relative d-inline-block outline-0 p-0 _156tc02 c-fff bc-5ccee3 fw-500 min-width-64 border-radius-2 "
  disabled={false}
  onClick={null}
>
  <div
    className="p-9px_16px_7px c-fff"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is explicitly defined 1`] = `
<Button
  className="position-relative d-inline-block outline-0 p-0 _156tc02 c-000 fw-500 min-width-64 border-radius-2 "
  disabled={false}
  onClick={null}
>
  <div
    className="p-9px_16px_7px c-000"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is omitted 1`] = `
<Button
  className="position-relative d-inline-block outline-0 p-0 _156tc02 c-fff bc-5ccee3 fw-500 min-width-64 border-radius-2 "
  disabled={false}
  onClick={null}
>
  <div
    className="p-9px_16px_7px c-fff"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a secondary button 1`] = `
<Button
  className="position-relative d-inline-block outline-0 p-0 _156tc02 c-fff bc-fa5400 fw-500 min-width-64 border-radius-2 "
  disabled={false}
  onClick={null}
>
  <div
    className="p-9px_16px_7px c-fff"
  >
    Press me
  </div>
</Button>
`;
